@@ -12,8 +12,9 @@
 - For parameters of functions `first_isolate`, `EUCAST_rules` the column names are now case-insensitive
 - Functions `as.rsi` and `as.mic` now add the package name and version as attribute
 - Expanded README.md
-- Added unit testing with Travis CI (https://travis-ci.org/msberends/AMR)
-- Added code coverage checking with Codecov (https://codecov.io/gh/msberends/AMR/tree/master/R)
+- Added unit testing with the `testthat` package
+- Added build tests for Linux and macOS using Travis CI (https://travis-ci.org/msberends/AMR)
+- Added Line coverage checking using CodeCov (https://codecov.io/gh/msberends/AMR/tree/master/R)
 
 ## 0.1.1
 - `EUCAST_rules` applies for amoxicillin even if ampicillin is missing
